--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/store-devtools": "^19.2.1",
     "@primeng/themes": "^19.1.4",
     "@tailwindcss/postcss": "^4.1.12",
+    "jalaali-js": "^1.2.8",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^19.1.2",
     "primeicons": "^7.0.0",
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "^19.2.14",
     "@angular/cli": "^19.2.14",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/jalaali-js": "^1.2.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
