--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "jalaali-js": "^1.2.8",
     "jwt-decode": "^4.0.0",
+    "localforage": "^1.10.0",
     "ngx-cookie-service": "^19.1.2",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
